# minesweeper

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pieces.pixil  pyproject.toml  requirements.txt
assets/board/: pieces.pixil
minesweeper/: board.py  cells.py  cli.py  coordinator.py  graphics.py  rendering.py  taxonomy.py  utils.py  window.py
