[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="minesweeper"
version="0.1.0"
description="Minesweeper implementation using Python."
authors=[{name="Mauricio Freitas"}]
urls={repo="https://github.com/meunomemauricio/minesweeper"}
readme="README.md"
license={text = "MIT"}
requires-python=">=3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
  "pre-commit",
]

[project.scripts]
minesweeper="minesweeper.cli:cli"

[tool.setuptools]
packages=["minesweeper"]

[tool.black]
line-length = 79

[[tool.mypy.overrides]]
module = [
    "imageio.*",
    "plotly.*",
    "pyglet.*",
]
ignore_missing_imports = true
